Fix extra overflow on tag exchange panel, when list of tags is long

--- a/client/src/scss/game-components/tag-exchange.scss
+++ b/client/src/scss/game-components/tag-exchange.scss
@@ -13,6 +13,7 @@
     border-radius: 0.5em;
     border: 3px solid colors.$menu-lvl1-light;
     background-color: rgba(colors.$bg-dark, 50%);
+    overflow: hidden;
 
     ul {
       @extend .miniscrollbar;
